--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>kaylnn are you free on aug 1st</h1>
+    <h1>stay tuned ...</h1>
 </body>
 </html>
