--- a/index.html
+++ b/index.html
@@ -3,10 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Gujanicic</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Courier New', Courier, monospace; /* Use a terminal-like font */
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            text-align: center;
+            white-space: pre;
+            background-color: black;
+            color: #00FF00;
+        }
+        .header {
+            font-family: 'Courier New', Courier, monospace; /* Use a terminal-like font */
+            width: 100%;
+            text-align: center;
+            padding: 20px 0;
+            font-size: 24px;
+            font-weight: 400;
+        }
+        .ascii-art {
+            font-family: monospace;
+            text-align: left;
+        }
+        .link {
+            text-decoration: underline;
+            color: #00FF00;;
+        }
+
+    </style>
 </head>
 <body>
-    <h1>stay tuned ...</h1>
+    <div class="header">Welcome to the Gujanicic Household</div>
+    <div class="ascii-art">
+        +------Door---------------+--+<br>
+        |        |                   |<br>
+        |  +--------------------+    |<br>
+        |  |     Living Room    |    |<br>
+        |  +--------------------+    |<br>
+        |      |                     |<br>
+        |  +---+-------+  +-------+  |<br>
+        |  |           |  |       |  |<br>
+        |  |           |  |       |  |<br>
+        |  | Kitchen   +--+       |  |<br>
+        |  |           |  |       |  |<br>
+        |  |           |  | Hall- |  |<br>
+        |  |           |  | way   |  |<br>
+        |  +-----------+  +-------+  |<br>
+        |      |              |      |<br>
+        |      |  +------+    |      |<br>
+        |      +--+      +----+      |      <br>
+        |         |           |      |     +--------------+---+<br>
+        |         |           |_ _ _ _ _ _ | <a href="https://gujanicic.com/aleksa" class="link">Aleksa's Bedroom</a> |<br>
+        |  +------+--+  +------+--+  |     +---+--------------+<br>
+        |  |  <a href="https://gujanicic.com/dimitrije" class="link">Dimitrije's Bedroom</a> |  | <br>
+        |  +---------+  +---------+  |<br>
+        +----------------------------+<br>
+    </div>
 </body>
 </html>
