--- a/aleksa/index.html
+++ b/aleksa/index.html
@@ -3,44 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aleksa's Page</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Aleksa Gujanicic</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to Aleksa's Page</h1>
-        <nav>
-            <a href="#about">Me</a>
-            <a href="#projects">Stuff I'm Working On</a>
-            <a href="#blog">Aleksa Thoughts</a>
-        </nav>
-    </header>
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hello, I'm Aleksa. This is my personal page where I share my projects and blog posts.</p>
-    </section>
-    <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-            <li>Project 1: <a href="#">Link to Project 1</a></li>
-            <li>Project 2: <a href="#">Link to Project 2</a></li>
-            <li>Project 3: <a href="#">Link to Project 3</a></li>
-        </ul>
-    </section>
-    <section id="blog">
-        <h2>Blog</h2>
-        <article>
-            <h3>Blog Post 1</h3>
-            <p>This is the content of blog post 1.</p>
-        </article>
-        <article>
-            <h3>Blog Post 2</h3>
-            <p>This is the content of blog post 2.</p>
-        </article>
-    </section>
-    <footer>
-        <p>&copy; 2024 Aleksa</p>
-    </footer>
+    <div id="intro" class="centered-title">
+        <div class="title-box">
+            <h1 id="title">
+                <span>H</span><span>e</span><span>y</span>, <span>I</span>'<span>m</span> <span>A</span><span>l</span><span>e</span><span>k</span><span>s</span><span>a</span>
+            </h1>
+        </div>
+        <div class="arrow" id="scroll-arrow">&#x2193;</div> <!-- Arrow pointing down -->
+    </div>
+    <div id="content" class="content">
+        <div class="box" id="about-box">
+            <h2>About Me</h2>
+            <img src="images/" alt="About Me Image" class="box-image">
+            <p>under construction</p>
+        </div>
+        <div class="box" id="experiences-box">
+            <h2>Experiences</h2>
+            <img src="images/Orange.png" alt="Experiences Image" class="box-image">
+            <p>under construction</p>
+        </div>
+        <div class="box" id="updates-box">
+            <h2>Updates</h2>
+            <img src="images/loyola_logo.jpg" alt="Updates Image" class="box-image">
+            <p>under construction</p>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
-
