--- a/aleksa/index.html
+++ b/aleksa/index.html
@@ -16,21 +16,18 @@
         <div class="arrow" id="scroll-arrow">&#x2193;</div> <!-- Arrow pointing down -->
     </div>
     <div id="content" class="content">
-        <div class="box" id="about-box">
+        <a href="https://gujanicic.com/aleksa/about" class="box" id="about-box">
             <h2>About Me</h2>
-            <img src="images/" alt="About Me Image" class="box-image">
-            <p>under construction</p>
-        </div>
-        <div class="box" id="experiences-box">
+            <img src="images/aleksapic.jpg" alt="About Me Image" class="box-image">
+        </a>
+        <a href="https://gujanicic.com/aleksa/experiences" class="box" id="experiences-box">
             <h2>Experiences</h2>
             <img src="images/Orange.png" alt="Experiences Image" class="box-image">
-            <p>under construction</p>
-        </div>
-        <div class="box" id="updates-box">
+        </a>
+        <a href="https://gujanicic.com/aleksa/updates" class="box" id="updates-box">
             <h2>Updates</h2>
             <img src="images/loyola_logo.jpg" alt="Updates Image" class="box-image">
-            <p>under construction</p>
-        </div>
+        </a>
     </div>
     <script src="script.js"></script>
 </body>
