--- a/aleksa/index.html
+++ b/aleksa/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aleksa Gujanicic</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=1.0">
 </head>
 <body>
     <div id="intro" class="centered-title">
