--- a/index.html
+++ b/index.html
@@ -26,21 +26,22 @@
             padding: 20px 0;
             font-size: 24px;
             font-weight: 400;
+            visibility: hidden;
         }
         .ascii-art {
             font-family: monospace;
             text-align: left;
+            visibility: hidden;
         }
         .link {
             text-decoration: underline;
             color: #00FF00;;
         }
-
     </style>
 </head>
 <body>
-    <div class="header">Welcome to the Gujanicic Household</div>
-    <div class="ascii-art">
+    <div id="header" class="header">Welcome to the Gujanicic Household</div>
+    <div id="ascii-art" class="ascii-art" style="visibility: hidden;">
         +------Door---------------+--+<br>
         |        |                   |<br>
         |  +--------------------+    |<br>
@@ -65,5 +66,40 @@
         |  +---------+  +---------+  |<br>
         +----------------------------+<br>
     </div>
+
+    <script>
+        const headerElement = document.getElementById('header');
+        const asciiElement = document.getElementById('ascii-art');
+        const headerContent = headerElement.innerHTML;
+        const asciiContent = asciiElement.innerHTML.split('<br>');
+        headerElement.innerHTML = '';
+        asciiElement.innerHTML = '';
+        headerElement.style.visibility = 'visible';
+        asciiElement.style.visibility = 'visible';
+
+        let headerIndex = 0;
+        let asciiIndex = 0;
+        const speed = 100; // typing speed in milliseconds
+
+        function typeHeader() {
+            if (headerIndex < headerContent.length) {
+                headerElement.innerHTML += headerContent.charAt(headerIndex);
+                headerIndex++;
+                setTimeout(typeHeader, speed);
+            } else {
+                typeAscii();
+            }
+        }
+
+        function typeAscii() {
+            if (asciiIndex < asciiContent.length) {
+                asciiElement.innerHTML += asciiContent[asciiIndex] + '<br>';
+                asciiIndex++;
+                setTimeout(typeAscii, speed);
+            }
+        }
+
+        window.onload = typeHeader;
+    </script>
 </body>
 </html>
