--- a/aleksa/index.html
+++ b/aleksa/index.html
@@ -1,35 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aleksa Gujanicic</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="styles.css?v=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Aleksa Gujanicic - JD Candidate</title>
+  <style>
+    /* Global Styles */
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #1abc9c, #3498db);
+      color: #fff;
+      line-height: 1.6;
+    }
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+    /* Container */
+    .container {
+      width: 90%;
+      max-width: 800px;
+      margin: auto;
+      padding: 20px;
+    }
+    /* Header / Hero Section */
+    header {
+      text-align: center;
+      padding: 80px 20px 40px;
+    }
+    header h1 {
+      font-size: 3rem;
+      margin: 20px 0 10px;
+    }
+    header p.tagline {
+      font-size: 1.25rem;
+      margin: 10px 0 20px;
+    }
+    .profile-img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      border: 5px solid #fff;
+      object-fit: cover;
+      display: block;
+      margin: 0 auto;
+    }
+    .linkedin-btn {
+      background-color: #0077b5;
+      color: #fff;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 30px;
+      font-size: 1rem;
+      cursor: pointer;
+      display: inline-block;
+      margin-top: 20px;
+      transition: background-color 0.3s ease;
+    }
+    .linkedin-btn:hover {
+      background-color: #005582;
+    }
+    /* Bio Section */
+    .bio {
+      background-color: rgba(0, 0, 0, 0.2);
+      padding: 30px;
+      border-radius: 10px;
+      margin: 40px 0;
+      opacity: 0;
+      transform: translateY(30px);
+      transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+    }
+    .bio.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+    .bio h2 {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+    .bio p {
+      font-size: 1.1rem;
+      margin-bottom: 15px;
+    }
+    /* Footer */
+    footer {
+      text-align: center;
+      padding: 20px 0;
+      font-size: 0.9rem;
+      background-color: rgba(0, 0, 0, 0.1);
+    }
+  </style>
 </head>
 <body>
-    <div id="intro" class="centered-title">
-        <div class="title-box">
-            <h1 id="title">
-                <span>H</span><span>e</span><span>y</span>, <span>I</span>'<span>m</span> <span>A</span><span>l</span><span>e</span><span>k</span><span>s</span><span>a</span>
-            </h1>
-        </div>
-        <div class="arrow" id="scroll-arrow">&#x2193;</div> <!-- Arrow pointing down -->
-    </div>
-    <div id="content" class="content">
-        <a href="https://gujanicic.com/aleksa/about" class="box" id="about-box">
-            <h2>About Me</h2>
-            <img src="images/aleksapic.jpg" alt="About Me Image" class="box-image">
-        </a>
-        <a href="https://gujanicic.com/aleksa/experiences" class="box" id="experiences-box">
-            <h2>Experiences</h2>
-            <img src="images/Orange.png" alt="Experiences Image" class="box-image">
-        </a>
-        <a href="https://gujanicic.com/aleksa/updates" class="box" id="updates-box">
-            <h2>Updates</h2>
-            <img src="images/loyola_logo.jpg" alt="Updates Image" class="box-image">
-        </a>
-    </div>
-    <script src="script.js"></script>
+  <!-- Hero Section -->
+  <header>
+    <img src="https://gujanicic.com/aleksa/images/aleksapic.jpg" alt="Aleksa's Profile Photo" class="profile-img" />
+    <h1>Aleksa Gujanicic</h1>
+    <p class="tagline">
+      First-generation Political Science Graduate &nbsp;|&nbsp; JD Candidate at Loyola University Chicago School of Law
+    </p>
+    <a href="https://www.linkedin.com/in/aleksa-gujanicic-694529170/" target="_blank" class="linkedin-btn">View LinkedIn</a>
+  </header>
+
+  <!-- Bio Section -->
+  <div class="container">
+    <section class="bio" id="bio">
+      <h2>About Me</h2>
+      <p>
+        I graduated from the University of Illinois Urbana-Champaign in May 2022 as a first-generation Political Science student. During my time at UIUC, I immersed myself in research and campus initiatives that deepened my understanding of law, governance, and public policy.
+      </p>
+      <p>
+        Post-graduation, I have built valuable experience in legal analysis and operations—experiences that have enriched my perspective and prepared me for the rigorous challenges of the legal field. Now, as a JD candidate at Loyola University Chicago School of Law, I am dedicated to advancing my legal expertise and pursuing justice.
+      </p>
+    </section>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Aleksa Gujanicic</p>
+  </footer>
+
+  <!-- JavaScript for fade-in animation of the bio section -->
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      const bioSection = document.getElementById('bio');
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            bioSection.classList.add('visible');
+            observer.unobserve(bioSection);
+          }
+        });
+      }, { threshold: 0.5 });
+      observer.observe(bioSection);
+    });
+  </script>
 </body>
 </html>
