--- a/aleksa/index.html
+++ b/aleksa/index.html
@@ -115,7 +115,7 @@
         I graduated from the University of Illinois Urbana-Champaign in May 2022 as a first-generation Political Science student. During my time at UIUC, I immersed myself in research and campus initiatives that deepened my understanding of law, governance, and public policy.
       </p>
       <p>
-        Post-graduation, I have built valuable experience in legal analysis and operations—experiences that have enriched my perspective and prepared me for the rigorous challenges of the legal field. Now, as a JD candidate at Loyola University Chicago School of Law, I am dedicated to advancing my legal expertise and pursuing justice.
+        Post-graduation, I have built valuable experience in legal analysis and operations—experiences that have enriched my perspective and prepared me for the rigorous challenges of the legal field. Now, as a JD candidate at Loyola University Chicago School of Law, I am dedicated to advancing my legal expertise.
       </p>
     </section>
   </div>
