--- a/aleksa/index.html
+++ b/aleksa/index.html
@@ -104,7 +104,7 @@
     <p class="tagline">
       First-generation Political Science Graduate &nbsp;|&nbsp; JD Candidate at Loyola University Chicago School of Law
     </p>
-    <a href="https://www.linkedin.com/in/aleksa-gujanicic-694529170/" target="_blank" class="linkedin-btn">View LinkedIn</a>
+    <a href="https://www.linkedin.com/in/aleksa-gujanicic-694529170/" target="_blank" class="linkedin-btn">LinkedIn</a>
   </header>
 
   <!-- Bio Section -->
